--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 spring.h2.console.enabled=true
 spring.datasource.url=jdbc:h2:mem:testdb
 logging.level.org.hibernate.SQL=DEBUG
+spring.datasource.username=sa
+spring.datasource.password=sa
+#spring.jpa.hibernate.ddl-auto=none
+#spring.datasource.initialization-mode=always
